--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.28.0",
+    "@react-spectrum/color": "^3.0.0-beta.23",
     "@spectrum-icons/workflow": "^4.2.2",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
