--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "fabric": "^5.3.0",
+    "fabric-history": "^1.7.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
