--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@adobe/react-spectrum": "^3.28.0",
+    "@adobe/react-spectrum": "^3.31.0",
     "@react-spectrum/color": "^3.0.0-beta.23",
     "@spectrum-icons/workflow": "^4.2.2",
     "@svgedit/svgcanvas": "^7.2.1",
@@ -18,17 +18,15 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "canvas": "^2.11.2",
     "dotting": "^2.0.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "fabric": "^5.3.0",
     "fabric-history": "^1.7.0",
-    "next": "13.4.13",
+    "next": "^13.5.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-sketch-canvas": "^6.2.0",
     "replicate": "^0.15.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
