--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "canvas": "2.8.0",
     "dotting": "^2.0.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "fabric": "^5.3.0",
     "fabric-history": "^1.7.0",
+    "jsdom": "19.0.0",
     "next": "^13.5.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
