--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "canvas": "2.8.0",
     "dotting": "^2.1.2",
     "eslint": "8.46.0",
@@ -28,6 +29,7 @@
     "next": "^13.5.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
